RESOLVED FIXED144022
[iOS] When computing visible rects for tiling, stop searching at UIWindows
https://bugs.webkit.org/show_bug.cgi?id=144022
Summary [iOS] When computing visible rects for tiling, stop searching at UIWindows
Myles C. Maxfield
Reported 2015-04-21 17:16:28 PDT
[iOS] When computing visible rects for tiling, stop searching at UIWindows
Attachments
Patch (2.12 KB, patch)
2015-04-21 17:23 PDT, Myles C. Maxfield
no flags
Patch (2.14 KB, patch)
2015-04-21 17:37 PDT, Myles C. Maxfield
simon.fraser: review+
Myles C. Maxfield
Comment 1 2015-04-21 17:23:53 PDT
Myles C. Maxfield
Comment 2 2015-04-21 17:37:41 PDT
Simon Fraser (smfr)
Comment 3 2015-04-21 17:39:01 PDT
Comment on attachment 251279 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=251279&action=review > Source/WebCore/ChangeLog:13 > + Reviewed by NOBODY (OOPS!). This should go above the blurb. > Source/WebCore/ChangeLog:15 > + No new tests. No need to say this.
Myles C. Maxfield
Comment 4 2015-04-21 17:52:18 PDT
Note You need to log in before you can comment on or make changes to this bug.